# Damilola-etl-pipeline

./: .env  .env.example  .gitignore  README.md  __init__.py  main.py  pyproject.toml
data/: processed_data.csv  processed_data.parquet  top_250_movies.json
scripts/: run_pipeline.py
src/: data_transform.py  db_loader.py  model.py  web_scraper.py
tests/: conftest.py  test_db_loader.py  test_scraper.py  test_transform.py
utils/: config.py  utils.py
